[gd_scene load_steps=9 format=2]

[ext_resource path="res://gui/inventory/base_inventory.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/inventory/inventory_slot.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui/inventory/furnace_inventory/arrow_fill.png" type="Texture" id=3]
[ext_resource path="res://gui/inventory/furnace_inventory/arrow_empty.png" type="Texture" id=4]
[ext_resource path="res://gui/inventory/furnace_inventory/fire.png" type="Texture" id=5]
[ext_resource path="res://gui/inventory/furnace_inventory/fire_empty.png" type="Texture" id=6]
[ext_resource path="res://gui/inventory/furnace_inventory/furnace_inventory.gd" type="Script" id=7]
[ext_resource path="res://gui/inventory/output_slot.gd" type="Script" id=8]

[node name="FurnaceInventory" instance=ExtResource( 1 )]
rect_min_size = Vector2( 336, 280 )
script = ExtResource( 7 )

[node name="MarginContainer" parent="." index="0"]
margin_bottom = 288.0

[node name="VBoxContainer" parent="MarginContainer" index="0"]
margin_bottom = 272.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer" index="0"]
margin_right = 320.0
margin_bottom = 104.0

[node name="FurnaceInventory" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer" index="0"]
margin_left = 88.0
margin_right = 232.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 96 )

[node name="Inputs" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer/FurnaceInventory" index="0"]
margin_right = 32.0
margin_bottom = 104.0

[node name="InventorySlot" parent="MarginContainer/VBoxContainer/CenterContainer/FurnaceInventory/Inputs" index="0" instance=ExtResource( 2 )]

[node name="TextureProgress" type="TextureProgress" parent="MarginContainer/VBoxContainer/CenterContainer/FurnaceInventory/Inputs" index="1"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 5 )
fill_mode = 3
nine_patch_stretch = true

[node name="FuelTimer" type="Timer" parent="MarginContainer/VBoxContainer/CenterContainer/FurnaceInventory/Inputs/TextureProgress" index="0"]
one_shot = true

[node name="InventorySlot2" parent="MarginContainer/VBoxContainer/CenterContainer/FurnaceInventory/Inputs" index="2" instance=ExtResource( 2 )]
margin_top = 72.0
margin_bottom = 104.0

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/CenterContainer/FurnaceInventory" index="1"]
margin_left = 36.0
margin_right = 52.0
margin_bottom = 104.0
rect_min_size = Vector2( 16, 0 )

[node name="TextureProgress" type="TextureProgress" parent="MarginContainer/VBoxContainer/CenterContainer/FurnaceInventory" index="2"]
margin_left = 56.0
margin_top = 44.0
margin_right = 88.0
margin_bottom = 60.0
size_flags_horizontal = 0
size_flags_vertical = 4
max_value = 10.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )

[node name="BurnTimer" type="Timer" parent="MarginContainer/VBoxContainer/CenterContainer/FurnaceInventory/TextureProgress" index="0"]
wait_time = 10.0
one_shot = true

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer/CenterContainer/FurnaceInventory" index="3"]
margin_left = 92.0
margin_right = 108.0
margin_bottom = 104.0
rect_min_size = Vector2( 16, 0 )

[node name="InventorySlot3" parent="MarginContainer/VBoxContainer/CenterContainer/FurnaceInventory" index="4" instance=ExtResource( 2 )]
margin_left = 112.0
margin_top = 36.0
margin_right = 144.0
margin_bottom = 68.0
size_flags_vertical = 4
script = ExtResource( 8 )

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer" index="1"]
margin_top = 112.0
margin_right = 320.0
margin_bottom = 112.0

[node name="PlayerInventory" parent="MarginContainer/VBoxContainer" index="2"]
margin_top = 120.0
margin_bottom = 264.0

[connection signal="timeout" from="MarginContainer/VBoxContainer/CenterContainer/FurnaceInventory/Inputs/TextureProgress/FuelTimer" to="." method="_on_FuelTimer_timeout"]
[connection signal="timeout" from="MarginContainer/VBoxContainer/CenterContainer/FurnaceInventory/TextureProgress/BurnTimer" to="." method="_on_BurnTimer_timeout"]
